objects/Apttus_Config2__OrderLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an order</description>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Basis__c</fullName>
        <label>Auto Renew Price Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Percentage__c</fullName>
        <label>Auto Renew Price Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount__c</fullName>
        <label>Bridge Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Eligibility__c</fullName>
        <label>Bridge_Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_End_Date__c</fullName>
        <label>Bridge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Monthly_Charge__c</fullName>
        <description>Net Price of Proposal Line item less the Bridge discount amount entered</description>
        <label>APTS_Bridge_Monthly_Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Start_Date__c</fullName>
        <label>Bridge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge__c</fullName>
        <label>Bridge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7 Days</fullName>
                </value>
                <value>
                    <fullName>14 Days</fullName>
                </value>
                <value>
                    <fullName>28 Days</fullName>
                </value>
                <value>
                    <fullName>N/a</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CUAS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUAS+1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Auto_Renewal__c</fullName>
        <label>Calculated Auto Renewal %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Min_YOY__c</fullName>
        <label>Calculated Min YOY%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_1__c</fullName>
        <label>Calculated Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_2__c</fullName>
        <label>Calculated Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_3__c</fullName>
        <label>Calculated Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cars_One_time_value_c__c</fullName>
        <formula>if(AND(if(ISPICKVAL(Apttus_Config2__LineStatus__c,&apos;New&apos;),True,False), 
if(APTS_Proposal_Business_Unit__c ==&apos;Canada&apos;,True,False),if(ISPICKVAL(Apttus_Config2__AttributeValueId__r.SCS_Print_Purchase_Options__c,&apos;Ship Only&apos;),True,False),if(APTS_Media_High_Level_Code__c==&apos;07&apos;,True,if(APTS_Media_High_Level_Code__c==&apos;21&apos;,True,if(APTS_Media_High_Level_Code__c==&apos;02&apos;,True,False)))),CASE(Apttus_Config2__BillingFrequency__c, 
&apos;Monthly&apos;,Apttus_Config2__AdjustedPrice__c, 
&apos;Yearly&apos;,Apttus_Config2__AdjustedPrice__c,Apttus_Config2__AdjustedPrice__c),if(AND(if(ISPICKVAL(Apttus_Config2__LineStatus__c,&apos;New&apos;),True,False),if(APTS_Proposal_Business_Unit__c==&apos;Canada&apos;,True,False),if(APTS_Media_High_Level_Code__c==&apos;07&apos;,True,if(APTS_Media_High_Level_Code__c==&apos;21&apos;,True,if(APTS_Media_High_Level_Code__c==&apos;02&apos;,True,False)))),CASE(Apttus_Config2__BillingFrequency__c,
&apos;&apos;,Apttus_Config2__AdjustedPrice__c,null),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cars One time value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L5__c</fullName>
        <label>Cat Hierarchy L5</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combination_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Detail</label>
        <referenceTo>APTS_Attribute_Value_Combination__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_End_Date__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_RenewalDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_End_Dates__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Line_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>Short Term Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Deal_Number__c</fullName>
        <label>Deal Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Type__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Deal Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Decentralized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_Decentralized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Entitlement_Date__c</fullName>
        <label>Entitlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN PROGRESS</fullName>
                    <default>true</default>
                    <label>IN PROGRESS</label>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Total__c</fullName>
        <label>Existing Agreement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Subscriptions_Total__c</fullName>
        <label>Existing Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Price_Increase_Percentage__c</fullName>
        <label>Price Increase Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Qty__c</fullName>
        <label>FL Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Fiscal_Year_End__c</fullName>
        <formula>TEXT(Apttus_Config2__OrderId__r.Apttus_QPConfig__ProposalId__r.Apttus_Proposal__Account__r.Fiscal_Year_End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Primary_Material__c</fullName>
        <label>Group Primary Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Type__c</fullName>
        <label>Group Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle A</fullName>
                </value>
                <value>
                    <fullName>Bundle B</fullName>
                </value>
                <value>
                    <fullName>Bundle C</fullName>
                </value>
                <value>
                    <fullName>Bundle D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr1_Yr2__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field will be populated from LineItem record.</description>
        <label>% Increase Yr1- Yr2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr2_Yr3__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field will be populated from LineItem record.</description>
        <label>% Increase Yr2- Yr3</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr3_Yr4__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field will be populated from LineItem record.</description>
        <label>% Increase Yr3- Yr4</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Info_PlanType__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_PlanType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Multi_Tiered_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Tiered Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Print_TP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Print?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category_Group__c</fullName>
        <label>Item Category Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Keep_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_MLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MYR_End_Date__c</fullName>
        <label>MYR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_MYR_Start_Date__c</fullName>
        <label>MYR Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Media_High_Level_Code__c</fullName>
        <label>Media High Level Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_New_Bridge_Discount__c</fullName>
        <description>This field is created to replace the existing APTS_Bridge_Discount__c(Picklist) field</description>
        <label>Bridge Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_New_Subscriptions_Total__c</fullName>
        <label>New Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Attorneys__c</fullName>
        <label>Number of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_One_time_value__c</fullName>
        <formula>if( APTS_Program_ID__c ==&apos;WCMP&apos;,Apttus_Config2__AdjustedPrice__c *12, 
if(AND(if(ISPICKVAL(Apttus_Config2__LineStatus__c,&apos;New&apos;),True,False),
OR(if(CONTAINS (text(Apttus_Config2__AttributeValueId__r.SCS_Print_Purchase_Options__c),&apos;APP&apos;),True,False), 
if(CONTAINS (text(Apttus_Config2__AttributeValueId__r.eBook_Purchase_Options__c),&apos;APP&apos;),True,False))), 
CASE(Apttus_Config2__BillingFrequency__c, 
&apos;Monthly&apos;,Apttus_Config2__AdjustedPrice__c *12, 
&apos;&apos;,Apttus_Config2__AdjustedPrice__c *12,Apttus_Config2__AdjustedPrice__c), 
if(AND(if(ISPICKVAL(Apttus_Config2__LineStatus__c,&apos;New&apos;),True,False), 
if(APTS_Item_Category_Group__c==&apos;ZPMT&apos;,True,if(APTS_Item_Category_Group__c==&apos;ZBAR&apos;,True,if(APTS_Item_Category_Group__c==&apos;ZPAV&apos;,True,False))), 
if(ISPICKVAL(Apttus_Config2__AttributeValueId__r.SCS_Print_Purchase_Options__c,&apos;Ship &amp; Enter Sub&apos;),True,if(ISPICKVAL(Apttus_Config2__AttributeValueId__r.SCS_Print_Purchase_Options__c,&apos;Sub Only&apos;),True,False))), 
CASE(Apttus_Config2__BillingFrequency__c, 
&apos;Monthly&apos;,Apttus_Config2__AdjustedPrice__c *12, 
&apos;Yearly&apos;,Apttus_Config2__AdjustedPrice__c,null),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One time value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Incremental__c</fullName>
        <label>Online Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Confirmation_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Confirmation/Sold-To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Partial_Year_Charge_Eligible__c</fullName>
        <label>Partial Year Charge Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Cap_Adjustment_Percentage__c</fullName>
        <label>Price Cap Adjustment Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Priced_Number_of_Attorneys__c</fullName>
        <label>Priced Number of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery__c</fullName>
        <label>Product Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Pricing_Model__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Product_Pricing_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Pricing Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Variant_ID__c</fullName>
        <label>Product Variant ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Program_ID__c</fullName>
        <label>Program ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Business_Unit__c</fullName>
        <description>Proposal Business Unit</description>
        <label>Proposal Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Prorate_base_Value__c</fullName>
        <formula>IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;ProRate&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term and ProRate&apos;)),DATEVALUE(Apttus_Config2__OrderId__r.Apttus_Config2__OrderDate__c) &gt;= APTS_Start_Date__c), (( Apttus_Config2__NetPrice__c /365)*((APTS_End_Date__c - DATEVALUE( Apttus_Config2__OrderId__r.Apttus_Config2__OrderDate__c))+1)),
IF(AND((ISPICKVAL(APTS_Term_Type__c, &apos;ProRate&apos;)|| ISPICKVAL(APTS_Term_Type__c, &apos;Co-Term and ProRate&apos;)),DATEVALUE(Apttus_Config2__OrderId__r.Apttus_Config2__OrderDate__c) &lt;APTS_Start_Date__c), (( Apttus_Config2__NetPrice__c /365)*( (APTS_End_Date__c - APTS_Start_Date__c)+1)),null))</formula>
        <label>Prorate base Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Term Commitment</fullName>
                </value>
                <value>
                    <fullName>Non-Renewable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Primary_Material__c</fullName>
        <label>SAP Deal Primary Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_MLA_Agreement_Number__c</fullName>
        <label>SAP MLA Agreement Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_Bill_To__c</fullName>
        <formula>Apttus_Config2__OrderId__r.APTS_SSD_bill_to__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_Ship_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Acct SSD</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Order Line Items (Ship To SSD)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_Sold_To__c</fullName>
        <formula>Apttus_Config2__OrderId__r.APTS_SSD_Sold_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Acct SSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Number__c</fullName>
        <label>Service Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Term_Type__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Term</fullName>
                </value>
                <value>
                    <fullName>ProRate</fullName>
                </value>
                <value>
                    <fullName>Co-Term and ProRate</fullName>
                </value>
                <value>
                    <fullName>Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Future Start Date and Co-Term</fullName>
                </value>
                <value>
                    <fullName>Future Start Date</fullName>
                </value>
                <value>
                    <fullName>Delivery Date and Co-Term</fullName>
                    <isActive>false</isActive>
                    <label>Delivery Date and Co-Term</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_WLEC_Product_Category__c</fullName>
        <label>WPD Product Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_Adjustment__c</fullName>
        <label>YOY % Yr 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Years_2_3_Charges_Disc_Surc__c</fullName>
        <formula>Apttus_QPConfig__ProposalLineItemId__r.APTS_Years_2_3_Charges_Disc_Surc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years 2-3 Disc/Surc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Years_2_Plus_Adjustment__c</fullName>
        <label>YoY 2+ %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Years_3_5_Adjustment__c</fullName>
        <label>YOY % Yr 3-5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>